fixtures/solidity/translated_semantic_tests/errors/via_import/s2.sol
import "./s1.sol" as S;